# semana-6-desarrollo-multiplataforma-qt-i-Javiervazqz

PracticaQTJavierVazquezGarcia/: CMakeLists.txt  Main.qml  main.cpp
